--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ flutter:
   - images/archive-icon.png
   - images/Document-Copy-icon.png
   - images/logo-sm.png
+  - images/8RM_3.png
   - images/organograma.png
   - images/folder-contract-icon.png
   - images/search.png
